[project]
name = "cefr-python-scorer"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.85.2",
    "uvicorn==0.18.3",
    "pydantic==1.10.2",
    "python-multipart==0.0.5",
    "aiofiles==22.1.0",
    "nltk==3.7"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"